# Code-Notebook

./: README.md
FFmpeg/Remuxing/: CMakeLists.txt  Readme.md  Remuxing0821.cpp  Remuxing0821.h  Remuxing0826.cpp  Remuxing0826.h  logger.cpp  logger.h  main.cpp
FFmpeg/Remuxing/includes/libavutil/: pixfmt.h
FFmpeg/SimpleGrayImage/: CMakeLists.txt  GrayImage0826.cpp  GrayImage0826.h  Logger.cpp  Logger.h  Readme.md  main.cpp
FFmpeg/SimpleGrayImage/20-08-19/: Main.cpp
FFmpeg/SimpleGrayImage/20-08-21/: main.cpp
FFmpeg/SimpleGrayImage/libs/: avdevice.lib  avfilter.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
FFmpeg/Transcoding/: CMakeLists.txt  Logger.cpp  Logger.h  main.cpp  readme.md  transcoding0828.cpp  transcoding0828.h  transcoding_0826.cpp  transcoding_0826.h
FFmpeg/Transcoding/includes/libavcodec/: codec.h
FFmpeg/Transcoding/libs/: avcodec.lib  avformat.lib
Vertx/Vertx Web/: question.md
Vertx/Vertx Web/src/main/kotlin/com/pingzi/web/: 01HelloWorldWeb.kt  02Vertx.kt  03VertxConfig.kt  04Async.kt  HttpServer.kt
